# eOS

./: .dir-locals.el  .gitignore  .gitmodules  README.md  build.sh  cross_compiling_config.toml  meson.build
src/: config.h  main.c
src/core/: mem.c  mem.h  systick.c  systick.h  task.c  task.h  types.h  usart.c  usart.h  util.c  util.h
src/startup/: interrupt_vector_table.h  startup.c  startup.h  stm32f303re.ld
subprojects/cmsis/: meson.build  stm32f303xe.h  system_stm32f3xx.h
subprojects/libopencm3/: meson.build
