project('libopencm3', 'c', version: '5.2.0')

add_project_arguments('-DSTM32F3', language: 'c')

src = [
  'libopencm3/include/libopencm3/stm32/adc.h',
  'libopencm3/include/libopencm3/stm32/can.h',
  'libopencm3/include/libopencm3/stm32/cec.h',
  'libopencm3/include/libopencm3/stm32/comparator.h',
  'libopencm3/include/libopencm3/stm32/crc.h',
  'libopencm3/include/libopencm3/stm32/dac.h',
  'libopencm3/include/libopencm3/stm32/dbgmcu.h',
  'libopencm3/include/libopencm3/stm32/dcmi.h',
  'libopencm3/include/libopencm3/stm32/desig.h',
  'libopencm3/include/libopencm3/stm32/dma2d.h',
  'libopencm3/include/libopencm3/stm32/dma.h',
  'libopencm3/include/libopencm3/stm32/dsi.h',
  'libopencm3/include/libopencm3/stm32/exti.h',
  'libopencm3/include/libopencm3/stm32/flash.h',
  'libopencm3/include/libopencm3/stm32/fsmc.h',
  'libopencm3/include/libopencm3/stm32/gpio.h',
  'libopencm3/include/libopencm3/stm32/hash.h',
  'libopencm3/include/libopencm3/stm32/hrtim.h',
  'libopencm3/include/libopencm3/stm32/i2c.h',
  'libopencm3/include/libopencm3/stm32/iwdg.h',
  'libopencm3/include/libopencm3/stm32/ltdc.h',
  'libopencm3/include/libopencm3/stm32/memorymap.h',
  'libopencm3/include/libopencm3/stm32/pwr.h',
  'libopencm3/include/libopencm3/stm32/quadspi.h',
  'libopencm3/include/libopencm3/stm32/rcc.h',
  'libopencm3/include/libopencm3/stm32/rtc.h',
  'libopencm3/include/libopencm3/stm32/sdio.h',
  'libopencm3/include/libopencm3/stm32/spi.h',
  'libopencm3/include/libopencm3/stm32/st_usbfs.h',
  'libopencm3/include/libopencm3/stm32/syscfg.h',
  'libopencm3/include/libopencm3/stm32/timer.h',
  'libopencm3/include/libopencm3/stm32/tools.h',
  'libopencm3/include/libopencm3/stm32/tsc.h',
  'libopencm3/include/libopencm3/stm32/usart.h',
  'libopencm3/include/libopencm3/stm32/wwdg.h',
  'libopencm3/include/libopencm3/stm32/common/adc_common_v2.h',
  'libopencm3/include/libopencm3/stm32/common/adc_common_v2_multi.h',
  'libopencm3/include/libopencm3/stm32/common/adc_common_v2_single.h',
  'libopencm3/include/libopencm3/stm32/common/crc_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/dac_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/dma_common_l1f013.h',
  'libopencm3/include/libopencm3/stm32/common/exti_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/flash_common_f01.h',
  'libopencm3/include/libopencm3/stm32/common/flash_common_f234.h',
  'libopencm3/include/libopencm3/stm32/common/gpio_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/gpio_common_f234.h',
  'libopencm3/include/libopencm3/stm32/common/hrtim_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/i2c_common_v2.h',
  'libopencm3/include/libopencm3/stm32/common/iwdg_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/pwr_common_v1.h',
  'libopencm3/include/libopencm3/stm32/common/rcc_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/spi_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/st_usbfs_common.h',
  'libopencm3/include/libopencm3/stm32/common/st_usbfs_v1.h',
  'libopencm3/include/libopencm3/stm32/common/syscfg_common_l1f234.h',
  'libopencm3/include/libopencm3/stm32/common/timer_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/usart_common_all.h',
  'libopencm3/include/libopencm3/stm32/common/usart_common_v2.h',
  'libopencm3/include/libopencm3/cm3/assert.h',
  'libopencm3/include/libopencm3/cm3/common.h',
  'libopencm3/include/libopencm3/cm3/cortex.h',
  'libopencm3/include/libopencm3/cm3/doc-cm3.h',
  'libopencm3/include/libopencm3/cm3/dwt.h',
  'libopencm3/include/libopencm3/cm3/fpb.h',
  'libopencm3/include/libopencm3/cm3/itm.h',
  'libopencm3/include/libopencm3/cm3/memorymap.h',
  'libopencm3/include/libopencm3/cm3/mpu.h',
  'libopencm3/include/libopencm3/cm3/scb.h',
  'libopencm3/include/libopencm3/cm3/scs.h',
  'libopencm3/include/libopencm3/cm3/sync.h',
  'libopencm3/include/libopencm3/cm3/systick.h',
  'libopencm3/include/libopencm3/cm3/tpiu.h',
  'libopencm3/lib/stm32/common/adc_common_v2.c',
  'libopencm3/lib/stm32/common/adc_common_v2_multi.c',
  'libopencm3/lib/stm32/common/crc_common_all.c',
  'libopencm3/lib/stm32/common/dac_common_all.c',
  'libopencm3/lib/stm32/common/dma_common_l1f013.c',
  'libopencm3/lib/stm32/common/exti_common_all.c',
  'libopencm3/lib/stm32/common/flash_common_f234.c',
  'libopencm3/lib/stm32/common/gpio_common_all.c',
  'libopencm3/lib/stm32/common/gpio_common_f0234.c',
  'libopencm3/lib/stm32/common/i2c_common_v2.c',
  'libopencm3/lib/stm32/common/iwdg_common_all.c',
  'libopencm3/lib/stm32/common/pwr_common_v1.c',
  'libopencm3/lib/stm32/common/rcc_common_all.c',
  'libopencm3/lib/stm32/common/spi_common_all.c',
  'libopencm3/lib/stm32/common/st_usbfs_core.c',
  'libopencm3/lib/stm32/common/st_usbfs_core.h',
  'libopencm3/lib/stm32/common/timer_common_all.c',
  'libopencm3/lib/stm32/common/timer_common_f0234.c',
  'libopencm3/lib/stm32/common/usart_common_all.c',
  'libopencm3/lib/stm32/common/usart_common_v2.c',
  'libopencm3/lib/stm32/f3/adc.c',
  'libopencm3/lib/stm32/f3/dac.c',
  'libopencm3/lib/stm32/f3/dma.c',
  'libopencm3/lib/stm32/f3/flash.c',
  'libopencm3/lib/stm32/f3/i2c.c',
  'libopencm3/lib/stm32/f3/iwdg.c',
  'libopencm3/lib/stm32/f3/pwr.c',
  'libopencm3/lib/stm32/f3/rcc.c',
  'libopencm3/lib/stm32/f3/spi.c',
  'libopencm3/lib/stm32/f3/timer.c',
  'libopencm3/lib/stm32/f3/usart.c',
  'libopencm3/lib/stm32/f3/vector_chipset.c',
  'libopencm3/lib/stm32/can.c',
  'libopencm3/lib/stm32/desig.c',
  'libopencm3/lib/stm32/st_usbfs_v1.c',
  'libopencm3/lib/cm3/assert.c',
  'libopencm3/lib/cm3/dwt.c',
  'libopencm3/lib/cm3/scb.c',
  'libopencm3/lib/cm3/sync.c',
  'libopencm3/lib/cm3/systick.c']

incs = include_directories('libopencm3/include/libopencm3/stm32',
                           'libopencm3/lib',
                           'libopencm3/include')

lib = static_library('libopencm3', sources: src, include_directories: incs)
dep = declare_dependency(link_with: lib, include_directories: incs)
